fb and wpp icons

--- a/layout/footer-floatbtns.html
+++ b/layout/footer-floatbtns.html
@@ -11,14 +11,14 @@
        <a target="_blank" title="Facebook NachoFlamenco" rel="noreferrer"
        href="#"
        class="w3-display-container float fb w3-hover-shadow delay-1s animated zoomInUp">
-        <i id="fb" class="fa fa-facebook-official my-float"></i>
+        <i id="fb" class="fab fa-facebook-square  my-float"></i>
     </a>
 
     <!--WHATSAPP ICON-->
     <a target="_blank" href="https://wa.me/54911********?text=Hola, me interesa saber sobre las clases de guitarra"
        rel="noreferrer"
        title="Whatsapp NachoFlamenco" class="w3-display-container float wpp w3-hover-shadow " onclick="showWpp();">
-        <i id="wpp" class="fa fa-whatsapp my-float"></i>
+        <i id="wpp" class="fab fa-whatsapp my-float"></i>
     </a>
 </div>
 
@@ -31,12 +31,12 @@
     <div class=" icons w3-section">
         <a target="_blank" rel="noreferrer" title="Facebook NachoFlamenco"
            href="https://www.facebook.com/"><i
-                class="fa fa-facebook-official w3-hover-opacity"></i></a>
+                class="fab fa-facebook-square w3-hover-opacity"></i></a>
     <!--    <a target="_blank" rel="noreferrer" title="Mercado libre NachoFlamenco"
            href="https://servicio.mercadolibre.com.ar/MLA-761425541-entrepisos-de-madera-_JM">
             <i class="fa fa-handshake-o w3-hover-opacity"></i></a>-->
         <a target="_blank" rel="noreferrer" href="https://twitter.com/#" title="Twitter NachoFlamenco">
-            <i class="fa fa-twitter w3-hover-opacity"></i></a>
+            <i class="fab fa-twitter w3-hover-opacity"></i></a>
     </div>
     <a href="https://tuentrepiso.github.io/#home" class="primary w3-button ">
         <i class="fa fa-home "></i>Nacho Flamenco</a>
