--- a/layout/footer-floatbtns.html
+++ b/layout/footer-floatbtns.html
@@ -30,15 +30,15 @@
 <footer class="w3-center w3-black w3-padding-64 w3-hover-opacity-off">
     <div class=" icons w3-section">
         <a target="_blank" rel="noreferrer" title="Facebook NachoFlamenco"
-           href="https://www.facebook.com/"><i
+           href="https://www.facebook.com/guitarraeneltalar/"><i
                 class="fab fa-facebook-square w3-hover-opacity"></i></a>
-    <!--    <a target="_blank" rel="noreferrer" title="Mercado libre NachoFlamenco"
-           href="https://servicio.mercadolibre.com.ar/MLA-761425541-entrepisos-de-madera-_JM">
-            <i class="fa fa-handshake-o w3-hover-opacity"></i></a>-->
-        <a target="_blank" rel="noreferrer" href="https://twitter.com/#" title="Twitter NachoFlamenco">
-            <i class="fab fa-twitter w3-hover-opacity"></i></a>
+   
+      <a target="_blank" rel="noreferrer" title="instagram libre NachoFlamenco" href="https://www.instagram.com/guitarra_en_talar/?hl=es-la"><i class="fab fa-instagram w3-hover-opacity"></i></a>
+
+        <a target="_blank" rel="noreferrer" href="https://www.youtube.com/channel/UC14vb-V57tf-j_kZpGDIFvA" title="Youtube NachoFlamenco"> <i class="fab fa-youtube w3-hover-opacity"></i></a>
+        
     </div>
-    <a href="https://tuentrepiso.github.io/#home" class="primary w3-button ">
+    <a href="#home" class="primary w3-button ">
         <i class="fa fa-home "></i>Nacho Flamenco</a>
     <p> Copyright © NachoFlamenco 2020. </p>
     <p> Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" rel="noreferrer"
