--- a/layout/footer-floatbtns.html
+++ b/layout/footer-floatbtns.html
@@ -15,7 +15,7 @@
     </a>
 
     <!--WHATSAPP ICON-->
-    <a target="_blank" href="https://wa.me/5491151144197text=Hola, me interesa saber sobre las clases de guitarra"
+    <a target="_blank" href="https://wa.me/5491151144197&text=Hola, me interesa saber sobre las clases de guitarra"
        rel="noreferrer"
        title="Whatsapp NachoFlamenco" class="w3-display-container float wpp w3-hover-shadow " onclick="showWpp();">
         <i id="wpp" class="fab fa-whatsapp my-float"></i>
