--- a/layout/footer-floatbtns.html
+++ b/layout/footer-floatbtns.html
@@ -7,15 +7,15 @@
 <div class="snackbar primaryDarkFabicon" id="general-snackbar">...</div>
 <div id="container-floating">
 
-    <!--Facebook ICON-->
+    <!--Facebook ICON
        <a target="_blank" title="Facebook NachoFlamenco" rel="noreferrer"
        href="#"
        class="w3-display-container float fb w3-hover-shadow delay-1s animated zoomInUp">
         <i id="fb" class="fab fa-facebook-square  my-float"></i>
     </a>
-
+-->
     <!--WHATSAPP ICON-->
-    <a target="_blank" href="https://wa.me/5491151144197&text=Hola, me interesa saber sobre las clases de guitarra"
+    <a target="_blank" href="https://wa.me/5491151144197?text=Hola, me interesa saber sobre las clases de guitarra"
        rel="noreferrer"
        title="Whatsapp NachoFlamenco" class="w3-display-container float wpp w3-hover-shadow " onclick="showWpp();">
         <i id="wpp" class="fab fa-whatsapp my-float"></i>
