--- a/layout/footer-floatbtns.html
+++ b/layout/footer-floatbtns.html
@@ -41,8 +41,8 @@
     <a href="#home" class="primary w3-button ">
         <i class="fa fa-home "></i>Nacho Flamenco</a>
     <p> Copyright © NachoFlamenco 2020. </p>
-    <p> Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" rel="noreferrer"
-                      class="w3-hover-text-green">w3.css</a></p>
+    <p> Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" rel="noreferrer" class="w3-hover-text-green">w3.css</a></p>    
+    <p> Desarrollado por <a href="https://github.com/Leonardo-Rocca" title="W3.CSS" target="_blank" rel="noreferrer" class="w3-hover-text-blue">Leonardo R.</a></p>
 
 </footer>
 <!--/////////////////////////////////////////////////-->
