--- a/css/main.css
+++ b/css/main.css
@@ -603,6 +603,12 @@ html {
   from{top:-100px;right:-300px;opacity:0 ;transform:scale(0)} to{top:0;right:0;opacity:1;transform:scale(1)}
 }
 
+
+.pad-squish {
+	padding-left:64px;
+	padding-right:64px;
+}
+
 /* IMAGES */
 /* ///////////////////////    HOVEREFFECT 01/2019 		//////////////////////////////// */
 /* ///////////////////////////////////////////////////////////////////////////////////// */
@@ -772,3 +778,228 @@ input::-webkit-input-placeholder {
 #searchBox input::-webkit-input-placeholder {
     color: transparent;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ .icon {
+	 float: left;
+	 position: relative;
+	 width: 19%;
+	 height: 0;
+	 margin: 1% 0.5%;
+	 padding-bottom: 19%;
+}
+ @media all and (min-width: 640px) {
+	 .icon {
+		 width: 9%;
+		 padding-bottom: 9%;
+	}
+}
+ .icon:last-of-type {
+	 margin-right: 0;
+}
+ .icon a {
+	 display: block;
+	 position: absolute;
+	 left: 0;
+	 width: 100%;
+	 height: 100%;
+	 border: 0;
+	 border-radius: 10px;
+	 background-color: #fff;
+	 background-size: 70%;
+	 background-repeat: no-repeat;
+	 background-position: center center;
+	 transition: all 0.2s ease-out;
+}
+ .icon a:hover {
+	 background-color: #222;
+	 background-size: 0%;
+	 transition: all 0.2s ease-out;
+}
+ .icon__name {
+	 position: absolute;
+	
+	 width: 100%;
+	 color: #fff;
+	 font-size: 13px;
+	 text-align: center;
+	 transition: all 0.3s ease-out;
+	 opacity: 0;
+	 filter: blur(25px);
+	 transform: translateZ(0);
+	 will-change: transform;
+}
+ .social-icon:hover .icon__name dep {
+	 transition: all 0.3s ease-out;
+	 opacity: 1;
+	 filter: blur(0);
+} 
+
+
+.social-icon:hover i dep{
+	 transition: all 0.3s ease-out;
+	 filter: blur(0);
+	 opacity: 0;
+}
+
+ .icon--youtube a {
+	 background-color: #00aced;
+	 background-image: url('https://cdn.jsdelivr.net/npm/simple-icons@v2/icons/youtube.svg');
+}
+ .social-icon--instagram a {
+	 background-color: #603f2e;
+	/* background-image: url('https://benhodgson.net/img/social/instagram.svg');*/
+}
+
+.icon--facebook i {
+    background-color: #3d5998;
+    color: white;
+    background-image: url('facebook.svg');
+}
+
+
+
+
+ .social-icon:hover .tooltip {
+	 transition: all 0.3s ease-out;
+	 opacity: 1;
+	 filter: blur(0);
+}
+
+ .social-icons {
+	 display: flex;
+	 justify-content: space-evenly;
+	 flex-wrap: wrap;
+} 
+.social-icons a{
+	text-decoration: none;
+}
+ .social-icon {
+	 display: flex;
+	 align-items: center;
+	 justify-content: center;
+	 position: relative;
+	 width: 60px;
+	 height: 60px;
+	 margin: 0 0.5rem;
+	 border-radius: 50%;
+	 cursor: pointer;
+	 font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+	 font-size: 2.5rem;
+	 text-decoration: none;
+	 transition: all 0.15s ease;
+}
+ .social-icon:hover {
+	 color: #fff;
+}
+ .social-icon:hover .tooltip {
+	 visibility: visible;
+	 opacity: 1;
+	 filter: blur(0);
+	 transform: translate(-50%, -150%);
+}
+ .social-icon:active {
+	 box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.5) inset;
+}
+
+ .social-icon--youtube {
+	 background: red;
+	 color: #fff;
+}
+ .social-icon--youtube .tooltip {
+	 background: red;
+	 color: currentColor;
+}
+ .social-icon--youtube .tooltip:after {
+	 border-top-color: red;
+}
+ .social-icon--facebook {
+	 background: #3b5a9b;
+	 color: #fff;
+}
+ .social-icon--facebook .tooltip {
+	 background: #3b5a9b;
+	 color: currentColor;
+}
+ .social-icon--facebook .tooltip:after {
+	 border-top-color: #3b5a9b;
+}
+ .social-icon--instagram {
+	 background: #527fa6;
+	 color: #fff;
+}
+ .social-icon--instagram .tooltip .deprec{
+	 background: #527fa6;
+	 color: currentColor;
+}
+ .social-icon--instagram .tooltip:after {
+	 border-top-color: #527fa6;
+}
+
+
+.social-icon--instagram .tooltip, .social-icon--instagram, .social-icon--instagram .tooltip:after{
+  background: #f09433; 
+background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%); 
+background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
+	 
+	 border-top-color: #d4422b;
+  
+  }
+
+
+ .social-icon i {
+	 position: relative;
+	 top: 1px;
+}
+/* Tooltips */
+ .tooltip {
+	 display: block;
+	 position: absolute;
+	 top: 0;
+	 left: 50%;
+	 padding: 0.8rem 1rem;
+	 border-radius: 40px;
+	 font-size: 0.8rem;
+	 font-weight: bold;
+	 opacity: 0;
+	 pointer-events: none;
+	 text-transform: uppercase;
+	 transform: translate(-50%, -100%);
+	 transition: all 0.3s ease;
+	 z-index: 1;
+	 filter: blur(0);
+}
+ .tooltip:after {
+	 display: block;
+	 position: absolute;
+	 bottom: 1px;
+	 left: 50%;
+	 width: 0;
+	 height: 0;
+	 content: "";
+	 border: solid;
+	 border-width: 10px 10px 0 10px;
+	 border-color: transparent;
+	 transform: translate(-50%, 100%);
+}
+ 
